- improve usage of generic types